--- a/Lista3/scss/styles.css
+++ b/Lista3/scss/styles.css
@@ -40,8 +40,6 @@
 .navbar nav a {
   display: block;
   padding: 18px 24px;
-  text-decoration: none;
-  color: white;
 }
 .navbar nav a:hover {
   background-color: #333;
@@ -53,4 +51,10 @@ body {
   background-color: #D4D9DB;
   margin: 0;
   font-family: "Dosis", sans-serif;
+}
+
+.defaultButton {
+  background-color: #808080;
+  text-decoration: none;
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
