--- a/Lista3/scss/components/_media_scroller.scss
+++ b/Lista3/scss/components/_media_scroller.scss
@@ -3,8 +3,9 @@
     height: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 
     img {
         border-radius: 10px;
