--- a/Lista3/scss/styles.css
+++ b/Lista3/scss/styles.css
@@ -45,15 +45,16 @@ body {
   font-family: "Dosis", sans-serif; }
 
 .spacer {
-  margin-top: 5rem; }
+  padding-top: 5rem; }
 
 .media-container {
   width: 100%;
   height: 200px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center; }
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap; }
   .media-container img {
     border-radius: 10px; }
 
