--- a/Lista3/scss/styles.css
+++ b/Lista3/scss/styles.css
@@ -1,79 +1,78 @@
 @import url("https://fonts.googleapis.com/css?family=Dosis&display=swap");
 #photo {
   width: 100%;
-  margin-top: 1rem; }
-  margin-top: 1rem; }
+  margin-top: 1rem;
+}
 
 .container {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  width: 80%; }
-  width: 80%; }
+  width: 80%;
+}
 
 #tytul {
   text-align: center;
   font-weight: 300;
-  font-size: 3rem; }
-  font-size: 3rem; }
+  font-size: 3rem;
+}
 
 .navbar {
-  background-color: #808080; }
-  .navbar nav {
-    margin: 0;
-    overflow: hidden; }
-    .navbar nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none; }
-    .navbar nav li {
-      float: left;
-      margin: auto; }
-      .navbar nav li.navbar-right {
-        float: right; }
-    .navbar nav a {
-      display: block;
-      padding: 18px 24px; }
-      .navbar nav a:hover {
-        background-color: #333;
-        font-size: 18px;
-        box-shadow: #333333; }
-  background-color: #808080; }
-  .navbar nav {
-    margin: 0;
-    overflow: hidden; }
-    .navbar nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none; }
-    .navbar nav li {
-      float: left;
-      margin: auto; }
-      .navbar nav li.navbar-right {
-        float: right; }
-    .navbar nav a {
-      display: block;
-      padding: 18px 24px;
-      text-decoration: none;
-      color: white; }
-      .navbar nav a:hover {
-        background-color: #333;
-        font-size: 18px;
-        box-shadow: #333333; }
+  background-color: #808080;
+}
+.navbar nav {
+  margin: 0;
+  overflow: hidden;
+}
+.navbar nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.navbar nav li {
+  float: left;
+  margin: auto;
+}
+.navbar nav li.navbar-right {
+  float: right;
+}
+.navbar nav a {
+  display: block;
+  padding: 18px 24px;
+}
+.navbar nav a:hover {
+  background-color: #333;
+  font-size: 18px;
+  box-shadow: #333333;
+}
 
 body {
   background-color: #D4D9DB;
   margin: 0;
-  font-family: "Dosis", sans-serif; }
+  font-family: "Dosis", sans-serif;
+}
 
 .spacer {
-  padding-top: 5rem; }
+  padding-top: 5rem;
+}
 
-.defaultButton {
+.text, .defaultButton {
   background-color: #808080;
   text-decoration: none;
-  color: white; }
+  color: white;
+}
+
+.defaultButton {
+  font-size: 17px;
+}
+
+.text {
+  background-color: #6bbfca;
+  font-size: 16px;
+  padding: 16px 32px;
+  border-radius: 10px;
+}
 
 .media-container {
   width: 100%;
@@ -82,8 +81,42 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap; }
-  .media-container img {
-    border-radius: 10px; }
+  flex-wrap: wrap;
+}
+.media-container img {
+  border-radius: 10px;
+}
 
-/*# sourceMappingURL=styles.css.map */
+.cont {
+  position: relative;
+  width: 50%;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.cont:hover .middle {
+  opacity: 1;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.cont:hover .image {
+  opacity: 0.3;
+}/*# sourceMappingURL=styles.css.map */
