--- a/Lista3/scss/components/_media_scroller.scss
+++ b/Lista3/scss/components/_media_scroller.scss
@@ -10,47 +10,39 @@
     img {
         border-radius: 10px;
     }
-  }
+}
 
-  .cont {
+.cont {
     position: relative;
     width: 50%;
-  }
-  
-  
-  
-  .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
 
-  }
-  
-  .cont:hover .middle {
-     opacity: 1;
-   }
+    .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        @include transform(translate(-50%, -50%));
+    }
+    
+    .image {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+    }
 
-   .image {
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-  }
+    &:hover .middle {
+        opacity: 1;
+    }
+    
+    &:hover .image {
+        opacity: 0.3;
+    }
+}
 
-  
-.cont:hover .image {
-    opacity: 0.3;
-  }
-  
 
-  
-  
 
-  
