--- a/Lista3/scss/components/_buttons.scss
+++ b/Lista3/scss/components/_buttons.scss
@@ -13,6 +13,6 @@
     @extend %defButton;
     background-color: #6bbfca;
     font-size: 16px;
-    padding: 16px 32px;
+    @include paddingChange(16px, 32px);
     border-radius: 10px;
   }
