--- a/Lista3/scss/components/_media_scroller.scss
+++ b/Lista3/scss/components/_media_scroller.scss
@@ -14,6 +14,7 @@
 
   .cont {
     position: relative;
+    width: 25%;
 
     .middle {
         transition: .5s ease;
@@ -41,7 +42,7 @@
     opacity: 1;
     display: block;
     width: 100%;
-    height: auto;
+    height: 300px ;
     transition: .5s ease;
     backface-visibility: hidden;
   }
