--- a/Lista4/css/style.css
+++ b/Lista4/css/style.css
@@ -19,18 +19,18 @@
     padding: 1em;
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-  background-color: #e1e1e1;
-  width: 5vh;
-  height: 5vh;
-  border-radius: 50%;
-  top: 50%;
-  /* transform: translateY(50%); */
-}
-
-@media (min-width: 768px) {
+@media (max-width: 468px) {
     .card img {
       height: 11em;
     }
+ }
+
+ .carousel-control-prev,
+ .carousel-control-next {
+   background-color: #e1e1e1;
+   width: 6vh;
+   height: 6vh;
+   border-radius: 50%;
+   top: 50%;
+   transform: translateY(-50%);
  }
