--- a/PROJEKCIK/frontend/cinemareservations/src/layout/MainNavigation.module.css
+++ b/PROJEKCIK/frontend/cinemareservations/src/layout/MainNavigation.module.css
@@ -4,12 +4,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #069ec8;
+  background-color: #adadad;
   padding: 0 3%;
 }
 
 .logo {
-  font-size: 2rem;
+  font-size: 3rem;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -31,7 +31,7 @@
 .header a {
   text-decoration: none;
   font-size: 1.25rem;
-  color: #fcb8d2;
+  color: #ffffff;
 }
 
 .header a:hover,
