--- a/PROJEKCIK/frontend/cinemareservations/src/pages/MainPage.module.css
+++ b/PROJEKCIK/frontend/cinemareservations/src/pages/MainPage.module.css
@@ -111,7 +111,12 @@
   .picker{
     display: flex;
     width: 1200px;
-    margin-left: -250px;
+    margin-left: -150px;
+    margin-bottom: 30px;
 
+  }
+
+  .screenings {
+    margin-top: 30px;
   }
   
