--- a/PROJEKCIK/frontend/cinemareservations/src/pages/MainPage.module.css
+++ b/PROJEKCIK/frontend/cinemareservations/src/pages/MainPage.module.css
@@ -1,9 +1,9 @@
 .container {
-    width: 1200px;
+    width: 200%;
+    height: 40vh;
     display: flex;
     justify-content: center;
-    margin-left: -275px;
-
+    transform: translate(-22%, 0%);
 }
 
 .description {
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 360px;
+    height: 300px;
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
     display: flex;
@@ -31,16 +31,13 @@
 }
 
 .naglowek {
-    margin-left: -275px;
+    width: 100%;
     margin-bottom: 20px;
-    display: 'inline-block'
+    display: 'inline-block';
+    transform: translate(-40%, 0%);
 }
 
-.custom {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
+
 
 .rowContainer {
     display: flex;
@@ -51,7 +48,6 @@
 }
 
 .movieContainer {
-    flex: 0 0 20%;
     max-width: 20%;
     position: relative;
 }
@@ -79,7 +75,7 @@
 }
 
 .item {
-    width: 100%;
+    width: auto;
     height: auto;
 }
 
@@ -110,10 +106,10 @@
   
   .picker{
     display: flex;
-    width: 1200px;
-    margin-left: -150px;
+    height: 5vh;
+    width: 200%;
     margin-bottom: 30px;
-
+    transform: translate(-17%, 0%);
   }
 
   .screenings {
